# angular-bazel-libs

./: LICENSE  README.md  angular.json  angular.json.bak  karma.conf.js  package-lock.json  package.json  tsconfig.json
apps/: BUILD.bazel  tsconfig.apps.json
apps/project-a/: BUILD.bazel  main.dev.ts
apps/project-a/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.dev.ts  app.module.ts
apps/project-a/app/lib-a/: BUILD.bazel  lib-a.module.ts
apps/project-b/: BUILD.bazel
apps/project-b/app/: app.component.html  app.component.ts  app.module.ts
e2e/src/: app.e2e-spec.ts
libs/: BUILD.bazel  tsconfig.libs.json
libs/lib-a/: BUILD.bazel  lib-a.component.ts  lib-a.module.ts  package.json  public_api.ts  tsconfig.lib.json
libs/lib-b/: BUILD.bazel  lib-b.component.ts  lib-b.module.ts  package.json  public_api.ts  tsconfig.lib.json
libs/lib-c/: BUILD.bazel  lib-c.component.ts  lib-c.module.ts  package.json  public_api.ts
