package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "npm_package")
load("@npm_angular_bazel//:index.bzl", "ng_module", "ng_package")

ng_module(
    name = "lib-b",
    srcs = glob([
      "**/*.ts",
    ]),
    tsconfig = "//libs/lib-b:tsconfig.lib.json",
    module_name = "@my/lib-b",
    deps = [
        "@npm//@angular/core",
        "@npm//@angular/common"
    ],
)

ng_package(
    name = "npm_package",
    srcs = ["package.json"],
    entry_point = ":index.ts",
    # tags = [
    #     "release-with-framework",
    # ],
    # Do not add more to this list.
    # Dependencies on the full npm_package cause long re-builds.
    visibility = [
        "//apps/project-b:__pkg__"
    ],
    deps = [
        ":lib-b"
    ],
)
